# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: check.yml  lint.yml  tests.yml
Gendiff/: __init__.py  core.py
Gendiff/scripts/: gendiff.py
gendiff/: __init__.py  cli.py  core.py  formatter.py  parser.py  setup.cfg  tree.py
gendiff/formatters/: __init__.py  json_style.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  diff.py
gendiff/tests/: expected.py  test_cli.py  test_flat.py  test_gendiff.py  test_json.py  test_nested.py  test_plain.py  test_yaml.py
gendiff/tests/fixtures/: complex_plain.txt  simple_json.txt
gendiff/tests/fixtures/expected/: json
